# winapi-window-frame

./: .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  readme.md
.github/workflows/: cmake-checks.yml  cmake-multi-platform.yml  cmake-tools.yml
src/: CMakeLists.txt
